--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "node postinstall.js"
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
@@ -16,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-maps": "^1.8.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
