--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "postinstall": "node postinstall.js"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
     "metro-config": "^0.80.4",
@@ -18,6 +19,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-maps": "^1.8.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
