--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~50.0.2",
+    "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
     "metro-config": "^0.80.4",
     "react": "18.2.0",
@@ -21,8 +22,7 @@
     "react-native-maps": "^1.8.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
-    "expo-font": "~11.10.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
