--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/images/notifire_logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/notifire_logo.png",
+      "image": "./assets/images/Opening 1.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
